# classguard

./: .gitignore  README.md  esp32s3_multi_module_driver_design.md  esp32s3_multi_module_driver_design_v2_actual_board.md
classguard/: .gitignore  CMakeLists.txt  ClassGuard_项目详细介绍说明.md  README.md  partitions.csv
classguard/LED_test_data/: CMakeLists.txt  README.md  led_test_data.c  led_test_data.h
classguard/components/bsp/: CMakeLists.txt  classguard_bsp.c
classguard/components/drivers/: CMakeLists.txt
classguard/components/drivers/beam_sensor/: beam_sensor.c
classguard/components/drivers/beam_sensor/include/: beam_sensor.h
classguard/components/drivers/hub75_display/: hub75_display.c
classguard/components/drivers/hub75_display/include/: hub75_display.h
classguard/components/drivers/i2c_bus/: i2c_bus.c
classguard/components/drivers/i2c_bus/include/: i2c_bus.h
classguard/components/drivers/mlx90640/: MLX90640_I2C_Driver.c  mlx90640.c
classguard/components/drivers/mlx90640/include/: mlx90640.h
classguard/components/drivers/pms5003/: pms5003.c
classguard/components/drivers/pms5003/include/: pms5003.h
classguard/components/drivers/scd41/: scd41.c
classguard/components/drivers/scd41/include/: scd41.h
classguard/components/drivers/sht35/: sht35.c
classguard/components/drivers/sht35/include/: sht35.h
classguard/components/services/: CMakeLists.txt
classguard/docs/datatype/: formal_sensor_telemetry_v0_1.md
classguard/docs/issues/: issue1.txt  issue2.txt
classguard/main/: CMakeLists.txt  air_quality_evaluator.c  air_quality_evaluator.h  app_data.c  app_data.h  fixed_sensor_data.c  fixed_sensor_data.h  main.c  sensor_service.c  sensor_service.h  telemetry_upload.c  telemetry_upload.h  thermal_service.c  thermal_service.h  wifi_upload_config.h
(+46 files in other folders)
